Add button to list recently added phrases

--- a/options.html
+++ b/options.html
@@ -23,6 +23,13 @@
           <button id="clearButton" type="button">Clear word list</button>
         </div>
       </div>
+      <div class="row">
+        <div class="column">
+          <button id="listButton" type="button">List recent words</button>
+          <ul id="wordList">
+          </ul>
+        </div>
+      </div>
     </div>
   </body>
   <script src="matcher.js"></script>
